# 25_Fall_Coursework

./: .gitattributes  .gitignore
AI/PythonBaseCode/: 10-Python循环.ipynb  11-Python函数.ipynb  12-Python包.ipynb  13-异常.ipynb  14-文件操作.ipynb  15-类.ipynb  16-时间.ipynb  2-Python基础.ipynb  3-Python字符串.ipynb  4-Python索引.ipynb  5-Python-List结构.ipynb  6-Python字典.ipynb  7-Python集合.ipynb  8-赋值机制.ipynb  9-Python判断结构.ipynb  Python练习题 -1.ipynb  Python练习题.ipynb  tang.txt
AI/Slides/: 2.1 知识表示-2025.pptx  2.2 搜索方法 --2025.pptx  第1章-人工智能概述-2025.pptx  第3章 Python编程简介.pptx  第4章 分类与聚类.pptx  第5章 回归--2025.pptx  第6章 人工神经网络--2025.pptx  第7章 深度学习--2025.pptx  集成学习-2025.pptx
AI/graphviz/: 使用说明.txt  更多软件.url  淘宝优惠券.url
AI/进阶作业_官瑞琪/: Loan_approval_data_2025.csv
ComputerNetwork/: 计网期末重点.md
ComputerNetwork/HW/: 官瑞琪_数据链路层题目设计.docx  官瑞琪_网络层知识点思维导图.xmind  官瑞琪_网络层综合题设计.docx  官瑞琪_自我介绍与学期规划.docx  网络层综合题设计.md  计算机网络综合题设计.md
DataScience/HW/: boston_report.md  experiment_report.md  实验结果报告——手写体数据集分类.md
DataScience/回归作业_官瑞琪/: boston.py
DataScience/复习/: 复习题.md
HPC/: 期末大作业.docx  期末大作业2.0.md  超算slides总结.md
HPC/HW/COM/3.gemm-Release/: CMakeLists.txt  README.md  build_and_run.sh  main.cpp  run_test.sh  sub.slurm
HPC/HW/COM/3.gemm-Release/include/: gemm.h  gemm_opt.h  matrix_utils.h  test_case.h
HPC/HW/COM/3.gemm-Release/src/: gemm_opt.cpp  test_case.cpp
HPC/HW/COM/4.reduce-Release/: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh  sub.slurm
HPC/HW/COM/4.reduce-Release/include/: reduce.h  test_case.h  utils.h
HPC/HW/COM/4.reduce-Release/src/: reduce.cu  test_case.cu
HPC/IntelOneAPI/: 课程内容和习题.pptx
HPC/Material/: Vtune操作.docx  cloverleaf编译实例.docx  martix.c  期末大作业.docx  第二章虚拟集群配置实验 (1).md
HPC/期末大作业_官瑞琪_320220912420/: 期末大作业_官瑞琪_320220912420.md
(+215 files in other folders)
